--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,42 @@ button {
 
 button > svg {
   margin-right: 0.5em;
-  color: green;
+  color: rgb(89, 127, 89);
+  height: 25px;
+  width: 25px;
   display: flex;
   align-items: center;
-  height: 1.5em;
-  width: 1.5em;
+}
+
+button.button-sm {
+  padding: 0.45em 0.65em;
+  font-size: 0.8rem;
+}
+
+button.button-md {
+  padding: 1em 1.5em;
+  font-size: 1rem;
+}
+
+button.button-lg {
+  padding: 1.8em 2.8em;
+  font-size: 1.5rem;
+}
+
+button.button-warning {
+  color: #fbbf24;
+  background-color: #fffbeb;
+  border: 1px solid #fbbf24;
+}
+
+button.button-success {
+  color: #047857;
+  background-color: #ecfdf5;
+  border: 1px solid #047857;
+}
+
+button.button-danger {
+  color: #f87171;
+  background-color: #fef2f2;
+  border: 1px solid #f87171;
 }
