--- a/src/index.css
+++ b/src/index.css
@@ -2,73 +2,58 @@
   box-sizing: border-box;
 }
 
+:root {
+  --navy: #1f2937;
+  --pink: #da6aec;
+  --red: #f43f5e;
+  --blue: #2f74dc;
+  --green: #22cd90;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #e9e3ff;
+  background-color: #2f2f2f;
 }
 
-main {
+.avatar {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
+  border: 0.3rem solid white;
 }
 
-button {
-  cursor: pointer;
-  background-color: #e5e7e5;
-  color: #4b5563;
-  border: 1px solid #6b7280;
-  border-radius: 0.35em;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-  font-weight: 700;
-  padding: 0.59em 1.05em;
-  line-height: 24px;
+.avatar > img {
+  width: 100%;
+}
+
+.avatar-letters {
+  background-color: var(--red);
+  color: white;
   display: flex;
   align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  font-family: 'Karla', sans-serif;
 }
 
-button > svg {
-  margin-right: 0.5em;
-  color: rgb(89, 127, 89);
-  height: 25px;
-  width: 25px;
-  display: flex;
-  align-items: center;
+.avatar-icon {
+  background-color: var(--navy);
 }
 
-button.button-sm {
-  padding: 0.45em 0.65em;
-  font-size: 0.8rem;
+.avatar > svg {
+  height: 100%;
+  width: 100%;
+  transform: translateY(20px);
+  color: whitesmoke;
 }
 
-button.button-md {
-  padding: 1em 1.5em;
-  font-size: 1rem;
+.navy {
+  background-color: #1f2937;
 }
 
-button.button-lg {
-  padding: 1.8em 2.8em;
-  font-size: 1.5rem;
-}
-
-button.button-warning {
-  color: #fbbf24;
-  background-color: #fffbeb;
-  border: 1px solid #fbbf24;
-}
-
-button.button-success {
-  color: #047857;
-  background-color: #ecfdf5;
-  border: 1px solid #047857;
-}
-
-button.button-danger {
-  color: #f87171;
-  background-color: #fef2f2;
-  border: 1px solid #f87171;
+.blue {
+  background-color: #2f74dc;
 }
