--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,18 @@ body {
   background-color: #1f2937;
 }
 
+.pink {
+  background-color: #da6aec;
+}
+
+.red {
+  background-color: #f43f5e;
+}
+
 .blue {
   background-color: #2f74dc;
+}
+
+.green {
+  background-color: #22cd90;
 }
